<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurfaceViewDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Stop">Stop</string>
    <string name="Play">Play</string>
    <string name="Pasue">Pasue</string>
    <string name="Smaller">ZoomIn</string>
    <string name="Bigger">ZoomOut</string>

</resources>
